# SecureText

./: .gitignore  cmap_mapping.json  docker-compose.yml
be/: .gitignore  Dockerfile  pom.xml
be/src/main/java/com/example/be/configs/: CorsConfig.java  RestTemplateConfig.java
be/src/main/java/com/example/be/controllers/: AppController.java
be/src/main/java/com/example/be/models/dtos/: EncryptDTO.java
be/src/main/resources/: application.properties
fe/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
fe/src/app/: app.css  app.html  app.routes.ts  app.ts
fe/src/app/components/post/: post.component.css  post.component.html  post.component.ts
fe/src/app/configs/: font.config.ts
fe/src/services/: app.service.ts
nginx/: nginx.conf
py/: Dockerfile  main.py  pyproject.toml  requirements.txt  server.py  test.py  text_service.py
py/configs/: app_config.py  viet_char_config.py
py/models/: EncrtyptDTO.py
py/outputs/NotoSans/: cmap_mapping.json
py/services/: font_service.py  io_service.py
py/src/securetext/: app.py  main.py
py/src/securetext/api/: font_api.py
py/src/securetext/configs/: app_config.py
py/src/securetext/models/: EncryptRequest.py
py/src/securetext/services/: font_service.py  io_service.py  text_service.py
py2/: Dockerfile  securetext.toml
py2/src/securetext/: app.py  main.py
py2/src/securetext/api/: welcome.py
py2/src/securetext/api/internal/: users.py
py2/src/securetext/services/: user_service.py
res/fonts/e4acf76be4/: e4acf76be4.json
